fix overflowing  button on small screens

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body {
     }
 
     .button {
-        width: 100%;
+        width: 75%;
         text-align: center;
     }
 
